code/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BEAVERS
    CROCODILE
    MUL
    NEWLINE
    SLEEPING
    WS

Grammar

Rule 0     S' -> statement_list
Rule 1     statement_list -> statement
Rule 2     statement_list -> statement_list statement
Rule 3     statement -> identifier
Rule 4     statement -> expression
Rule 5     statement -> if_statement
Rule 6     statement -> turn
Rule 7     statement -> step
Rule 8     turn -> TURN LEFT
Rule 9     turn -> TURN RIGHT
Rule 10    turn -> TURN NUM_INT
Rule 11    turn -> expression POINT TURNTO expression
Rule 12    turn -> TURNTO BANANA LSQBRACK NUM_INT RSQBRACK
Rule 13    turn -> TURNTO BANANA LSQBRACK expression RSQBRACK
Rule 14    turn -> TURNTO MATCH LSQBRACK NUM_INT RSQBRACK
Rule 15    turn -> TURNTO MATCH LSQBRACK expression RSQBRACK
Rule 16    turn -> TURNTO expression
Rule 17    step -> STEP expression
Rule 18    step -> STEP MINUS expression
Rule 19    step -> STEP DISTANCETO expression
Rule 20    step -> expression POINT STEP expression
Rule 21    step -> BEAVER LSQBRACK NUM_INT RSQBRACK POINT STEP expression
Rule 22    step -> TURTLE LSQBRACK NUM_INT RSQBRACK POINT STEP expression
Rule 23    step -> STEP DISTANCETO BANANA LSQBRACK NUM_INT RSQBRACK
Rule 24    step -> STEP DISTANCETO BANANA LSQBRACK expression RSQBRACK
Rule 25    step -> STEP DISTANCETO MATCH LSQBRACK NUM_INT RSQBRACK
Rule 26    step -> STEP DISTANCETO MATCH LSQBRACK expression RSQBRACK
Rule 27    identifier -> IDENTIFIER
Rule 28    primitive -> NUM_INT
Rule 29    primitive -> boolean
Rule 30    expression -> expression PLUS expression
Rule 31    expression -> expression MINUS expression
Rule 32    boolean -> boolean AND boolean
Rule 33    boolean -> boolean OR boolean
Rule 34    boolean -> expression EQ expression
Rule 35    boolean -> expression GT expression
Rule 36    boolean -> expression LT expression
Rule 37    expression -> NOT expression
Rule 38    boolean -> TRUE
Rule 39    boolean -> FALSE
Rule 40    assignable -> primitive
Rule 41    assignable -> expression
Rule 42    arguments -> arguments COMMA expression
Rule 43    arguments -> expression
Rule 44    arguments -> <empty>
Rule 45    expression -> LSQBRACK arguments RSQBRACK
Rule 46    expression -> identifier LSQBRACK expression RSQBRACK
Rule 47    statement -> identifier LSQBRACK expression RSQBRACK EQUALS expression
Rule 48    expression -> identifier EQUALS assignable
Rule 49    if_statement -> IF expression statement_list COMMA
Rule 50    if_statement -> IF expression statement_list ELSE statement_list COMMA
Rule 51    statement -> SAY LPAREN RPAREN
Rule 52    statement -> SEE LPAREN RPAREN
Rule 53    statement -> HEALTH LPAREN RPAREN
Rule 54    expression -> primitive
Rule 55    expression -> identifier
Rule 56    statement -> expression POINT TIMES ARROW_LTR statement_list COMMA
Rule 57    statement -> FOR identifier IN BANANAS statement_list COMMA
Rule 58    statement -> FOR identifier IN TURTLES statement_list COMMA
Rule 59    statement -> FOR identifier IN CROCODILES statement_list COMMA
Rule 60    statement -> FOR identifier IN MATCHES statement_list COMMA
Rule 61    statement -> UNTIL expression statement_list COMMA
Rule 62    statement -> UNTIL NEAR MATCH statement_list COMMA
Rule 63    statement -> identifier EQUALS LPAREN arguments RPAREN ARROW_LTR statement_list COMMA
Rule 64    statement -> RETURN expression
Rule 65    expression -> identifier LPAREN arguments RPAREN
Rule 66    statement -> identifier arguments COMMA

Terminals, with rules where they appear

AND                  : 32
ARROW_LTR            : 56 63
BANANA               : 12 13 23 24
BANANAS              : 57
BEAVER               : 21
BEAVERS              : 
COMMA                : 42 49 50 56 57 58 59 60 61 62 63 66
CROCODILE            : 
CROCODILES           : 59
DISTANCETO           : 19 23 24 25 26
ELSE                 : 50
EQ                   : 34
EQUALS               : 47 48 63
FALSE                : 39
FOR                  : 57 58 59 60
GT                   : 35
HEALTH               : 53
IDENTIFIER           : 27
IF                   : 49 50
IN                   : 57 58 59 60
LEFT                 : 8
LPAREN               : 51 52 53 63 65
LSQBRACK             : 12 13 14 15 21 22 23 24 25 26 45 46 47
LT                   : 36
MATCH                : 14 15 25 26 62
MATCHES              : 60
MINUS                : 18 31
MUL                  : 
NEAR                 : 62
NEWLINE              : 
NOT                  : 37
NUM_INT              : 10 12 14 21 22 23 25 28
OR                   : 33
PLUS                 : 30
POINT                : 11 20 21 22 56
RETURN               : 64
RIGHT                : 9
RPAREN               : 51 52 53 63 65
RSQBRACK             : 12 13 14 15 21 22 23 24 25 26 45 46 47
SAY                  : 51
SEE                  : 52
SLEEPING             : 
STEP                 : 17 18 19 20 21 22 23 24 25 26
TIMES                : 56
TRUE                 : 38
TURN                 : 8 9 10
TURNTO               : 11 12 13 14 15 16
TURTLE               : 22
TURTLES              : 58
UNTIL                : 61 62
WS                   : 
error                : 

Nonterminals, with rules where they appear

arguments            : 42 45 63 65 66
assignable           : 48
boolean              : 29 32 32 33 33
expression           : 4 11 11 13 15 16 17 18 19 20 20 21 22 24 26 30 30 31 31 34 34 35 35 36 36 37 41 42 43 46 47 47 49 50 56 61 64
identifier           : 3 46 47 48 55 57 58 59 60 63 65 66
if_statement         : 5
primitive            : 40 54
statement            : 1 2
statement_list       : 2 49 50 50 56 57 58 59 60 61 62 63 0
step                 : 7
turn                 : 6

Parsing method: LALR

state 0

    (0) S' -> . statement_list
    (1) statement_list -> . statement
    (2) statement_list -> . statement_list statement
    (3) statement -> . identifier
    (4) statement -> . expression
    (5) statement -> . if_statement
    (6) statement -> . turn
    (7) statement -> . step
    (47) statement -> . identifier LSQBRACK expression RSQBRACK EQUALS expression
    (51) statement -> . SAY LPAREN RPAREN
    (52) statement -> . SEE LPAREN RPAREN
    (53) statement -> . HEALTH LPAREN RPAREN
    (56) statement -> . expression POINT TIMES ARROW_LTR statement_list COMMA
    (57) statement -> . FOR identifier IN BANANAS statement_list COMMA
    (58) statement -> . FOR identifier IN TURTLES statement_list COMMA
    (59) statement -> . FOR identifier IN CROCODILES statement_list COMMA
    (60) statement -> . FOR identifier IN MATCHES statement_list COMMA
    (61) statement -> . UNTIL expression statement_list COMMA
    (62) statement -> . UNTIL NEAR MATCH statement_list COMMA
    (63) statement -> . identifier EQUALS LPAREN arguments RPAREN ARROW_LTR statement_list COMMA
    (64) statement -> . RETURN expression
    (66) statement -> . identifier arguments COMMA
    (27) identifier -> . IDENTIFIER
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression MINUS expression
    (37) expression -> . NOT expression
    (45) expression -> . LSQBRACK arguments RSQBRACK
    (46) expression -> . identifier LSQBRACK expression RSQBRACK
    (48) expression -> . identifier EQUALS assignable
    (54) expression -> . primitive
    (55) expression -> . identifier
    (65) expression -> . identifier LPAREN arguments RPAREN
    (49) if_statement -> . IF expression statement_list COMMA
    (50) if_statement -> . IF expression statement_list ELSE statement_list COMMA
    (8) turn -> . TURN LEFT
    (9) turn -> . TURN RIGHT
    (10) turn -> . TURN NUM_INT
    (11) turn -> . expression POINT TURNTO expression
    (12) turn -> . TURNTO BANANA LSQBRACK NUM_INT RSQBRACK
    (13) turn -> . TURNTO BANANA LSQBRACK expression RSQBRACK
    (14) turn -> . TURNTO MATCH LSQBRACK NUM_INT RSQBRACK
    (15) turn -> . TURNTO MATCH LSQBRACK expression RSQBRACK
    (16) turn -> . TURNTO expression
    (17) step -> . STEP expression
    (18) step -> . STEP MINUS expression
    (19) step -> . STEP DISTANCETO expression
    (20) step -> . expression POINT STEP expression
    (21) step -> . BEAVER LSQBRACK NUM_INT RSQBRACK POINT STEP expression
    (22) step -> . TURTLE LSQBRACK NUM_INT RSQBRACK POINT STEP expression
    (23) step -> . STEP DISTANCETO BANANA LSQBRACK NUM_INT RSQBRACK
    (24) step -> . STEP DISTANCETO BANANA LSQBRACK expression RSQBRACK
    (25) step -> . STEP DISTANCETO MATCH LSQBRACK NUM_INT RSQBRACK
    (26) step -> . STEP DISTANCETO MATCH LSQBRACK expression RSQBRACK
    (28) primitive -> . NUM_INT
    (29) primitive -> . boolean
    (32) boolean -> . boolean AND boolean
    (33) boolean -> . boolean OR boolean
    (34) boolean -> . expression EQ expression
    (35) boolean -> . expression GT expression
    (36) boolean -> . expression LT expression
    (38) boolean -> . TRUE
    (39) boolean -> . FALSE

    SAY             shift and go to state 9
    SEE             shift and go to state 10
    HEALTH          shift and go to state 11
    FOR             shift and go to state 12
    UNTIL           shift and go to state 13
    RETURN          shift and go to state 14
    IDENTIFIER      shift and go to state 15
    NOT             shift and go to state 16
    LSQBRACK        shift and go to state 8
    IF              shift and go to state 18
    TURN            shift and go to state 19
    TURNTO          shift and go to state 21
    STEP            shift and go to state 22
    BEAVER          shift and go to state 23
    TURTLE          shift and go to state 24
    NUM_INT         shift and go to state 20
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    statement_list                 shift and go to state 1
    statement                      shift and go to state 2
    identifier                     shift and go to state 3
    expression                     shift and go to state 4
    if_statement                   shift and go to state 5
    turn                           shift and go to state 6
    step                           shift and go to state 7
    primitive                      shift and go to state 17
    boolean                        shift and go to state 25

state 1

    (0) S' -> statement_list .
    (2) statement_list -> statement_list . statement
    (3) statement -> . identifier
    (4) statement -> . expression
    (5) statement -> . if_statement
    (6) statement -> . turn
    (7) statement -> . step
    (47) statement -> . identifier LSQBRACK expression RSQBRACK EQUALS expression
    (51) statement -> . SAY LPAREN RPAREN
    (52) statement -> . SEE LPAREN RPAREN
    (53) statement -> . HEALTH LPAREN RPAREN
    (56) statement -> . expression POINT TIMES ARROW_LTR statement_list COMMA
    (57) statement -> . FOR identifier IN BANANAS statement_list COMMA
    (58) statement -> . FOR identifier IN TURTLES statement_list COMMA
    (59) statement -> . FOR identifier IN CROCODILES statement_list COMMA
    (60) statement -> . FOR identifier IN MATCHES statement_list COMMA
    (61) statement -> . UNTIL expression statement_list COMMA
    (62) statement -> . UNTIL NEAR MATCH statement_list COMMA
    (63) statement -> . identifier EQUALS LPAREN arguments RPAREN ARROW_LTR statement_list COMMA
    (64) statement -> . RETURN expression
    (66) statement -> . identifier arguments COMMA
    (27) identifier -> . IDENTIFIER
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression MINUS expression
    (37) expression -> . NOT expression
    (45) expression -> . LSQBRACK arguments RSQBRACK
    (46) expression -> . identifier LSQBRACK expression RSQBRACK
    (48) expression -> . identifier EQUALS assignable
    (54) expression -> . primitive
    (55) expression -> . identifier
    (65) expression -> . identifier LPAREN arguments RPAREN
    (49) if_statement -> . IF expression statement_list COMMA
    (50) if_statement -> . IF expression statement_list ELSE statement_list COMMA
    (8) turn -> . TURN LEFT
    (9) turn -> . TURN RIGHT
    (10) turn -> . TURN NUM_INT
    (11) turn -> . expression POINT TURNTO expression
    (12) turn -> . TURNTO BANANA LSQBRACK NUM_INT RSQBRACK
    (13) turn -> . TURNTO BANANA LSQBRACK expression RSQBRACK
    (14) turn -> . TURNTO MATCH LSQBRACK NUM_INT RSQBRACK
    (15) turn -> . TURNTO MATCH LSQBRACK expression RSQBRACK
    (16) turn -> . TURNTO expression
    (17) step -> . STEP expression
    (18) step -> . STEP MINUS expression
    (19) step -> . STEP DISTANCETO expression
    (20) step -> . expression POINT STEP expression
    (21) step -> . BEAVER LSQBRACK NUM_INT RSQBRACK POINT STEP expression
    (22) step -> . TURTLE LSQBRACK NUM_INT RSQBRACK POINT STEP expression
    (23) step -> . STEP DISTANCETO BANANA LSQBRACK NUM_INT RSQBRACK
    (24) step -> . STEP DISTANCETO BANANA LSQBRACK expression RSQBRACK
    (25) step -> . STEP DISTANCETO MATCH LSQBRACK NUM_INT RSQBRACK
    (26) step -> . STEP DISTANCETO MATCH LSQBRACK expression RSQBRACK
    (28) primitive -> . NUM_INT
    (29) primitive -> . boolean
    (32) boolean -> . boolean AND boolean
    (33) boolean -> . boolean OR boolean
    (34) boolean -> . expression EQ expression
    (35) boolean -> . expression GT expression
    (36) boolean -> . expression LT expression
    (38) boolean -> . TRUE
    (39) boolean -> . FALSE

    SAY             shift and go to state 9
    SEE             shift and go to state 10
    HEALTH          shift and go to state 11
    FOR             shift and go to state 12
    UNTIL           shift and go to state 13
    RETURN          shift and go to state 14
    IDENTIFIER      shift and go to state 15
    NOT             shift and go to state 16
    LSQBRACK        shift and go to state 8
    IF              shift and go to state 18
    TURN            shift and go to state 19
    TURNTO          shift and go to state 21
    STEP            shift and go to state 22
    BEAVER          shift and go to state 23
    TURTLE          shift and go to state 24
    NUM_INT         shift and go to state 20
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    statement                      shift and go to state 28
    identifier                     shift and go to state 3
    expression                     shift and go to state 4
    if_statement                   shift and go to state 5
    turn                           shift and go to state 6
    step                           shift and go to state 7
    primitive                      shift and go to state 17
    boolean                        shift and go to state 25

state 2

    (1) statement_list -> statement .

    SAY             reduce using rule 1 (statement_list -> statement .)
    SEE             reduce using rule 1 (statement_list -> statement .)
    HEALTH          reduce using rule 1 (statement_list -> statement .)
    FOR             reduce using rule 1 (statement_list -> statement .)
    UNTIL           reduce using rule 1 (statement_list -> statement .)
    RETURN          reduce using rule 1 (statement_list -> statement .)
    IDENTIFIER      reduce using rule 1 (statement_list -> statement .)
    NOT             reduce using rule 1 (statement_list -> statement .)
    LSQBRACK        reduce using rule 1 (statement_list -> statement .)
    IF              reduce using rule 1 (statement_list -> statement .)
    TURN            reduce using rule 1 (statement_list -> statement .)
    TURNTO          reduce using rule 1 (statement_list -> statement .)
    STEP            reduce using rule 1 (statement_list -> statement .)
    BEAVER          reduce using rule 1 (statement_list -> statement .)
    TURTLE          reduce using rule 1 (statement_list -> statement .)
    NUM_INT         reduce using rule 1 (statement_list -> statement .)
    TRUE            reduce using rule 1 (statement_list -> statement .)
    FALSE           reduce using rule 1 (statement_list -> statement .)
    $end            reduce using rule 1 (statement_list -> statement .)
    COMMA           reduce using rule 1 (statement_list -> statement .)
    ELSE            reduce using rule 1 (statement_list -> statement .)


state 3

    (3) statement -> identifier .
    (47) statement -> identifier . LSQBRACK expression RSQBRACK EQUALS expression
    (63) statement -> identifier . EQUALS LPAREN arguments RPAREN ARROW_LTR statement_list COMMA
    (66) statement -> identifier . arguments COMMA
    (46) expression -> identifier . LSQBRACK expression RSQBRACK
    (48) expression -> identifier . EQUALS assignable
    (55) expression -> identifier .
    (65) expression -> identifier . LPAREN arguments RPAREN
    (42) arguments -> . arguments COMMA expression
    (43) arguments -> . expression
    (44) arguments -> .
    (30) expression -> . expression PLUS expression
    (31) expression -> . expression MINUS expression
    (37) expression -> . NOT expression
    (45) expression -> . LSQBRACK arguments RSQBRACK
    (46) expression -> . identifier LSQBRACK expression RSQBRACK
    (48) expression -> . identifier EQUALS assignable
    (54) expression -> . primitive
    (55) expression -> . identifier
    (65) expression -> . identifier LPAREN arguments RPAREN
    (27) identifier -> . IDENTIFIER
    (28) primitive -> . NUM_INT
    (29) primitive -> . boolean
    (32) boolean -> . boolean AND boolean
    (33) boolean -> . boolean OR boolean
    (34) boolean -> . expression EQ expression
    (35) boolean -> . expression GT expression
    (36) boolean -> . expression LT expression
    (38) boolean -> . TRUE
    (39) boolean -> . FALSE

  ! shift/reduce conflict for LSQBRACK resolved as shift
  ! reduce/reduce conflict for SAY resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for SEE resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for HEALTH resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for FOR resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for UNTIL resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for RETURN resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for IDENTIFIER resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for NOT resolved using rule 3 (statement -> identifier .)
  ! shift/reduce conflict for LSQBRACK resolved as shift
  ! reduce/reduce conflict for IF resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for TURN resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for TURNTO resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for STEP resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for BEAVER resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for TURTLE resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for NUM_INT resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for TRUE resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for FALSE resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for $end resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for COMMA resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for ELSE resolved using rule 3 (statement -> identifier .)
  ! reduce/reduce conflict for COMMA resolved using rule 3 (statement -> identifier .)
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for NUM_INT resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
    SAY             reduce using rule 3 (statement -> identifier .)
    SEE             reduce using rule 3 (statement -> identifier .)
    HEALTH          reduce using rule 3 (statement -> identifier .)
    FOR             reduce using rule 3 (statement -> identifier .)
    UNTIL           reduce using rule 3 (statement -> identifier .)
    RETURN          reduce using rule 3 (statement -> identifier .)
    IF              reduce using rule 3 (statement -> identifier .)
    TURN            reduce using rule 3 (statement -> identifier .)
    TURNTO          reduce using rule 3 (statement -> identifier .)
    STEP            reduce using rule 3 (statement -> identifier .)
    BEAVER          reduce using rule 3 (statement -> identifier .)
    TURTLE          reduce using rule 3 (statement -> identifier .)
    $end            reduce using rule 3 (statement -> identifier .)
    COMMA           reduce using rule 3 (statement -> identifier .)
    ELSE            reduce using rule 3 (statement -> identifier .)
    LSQBRACK        shift and go to state 30
    EQUALS          shift and go to state 32
    POINT           reduce using rule 55 (expression -> identifier .)
    PLUS            reduce using rule 55 (expression -> identifier .)
    MINUS           reduce using rule 55 (expression -> identifier .)
    EQ              reduce using rule 55 (expression -> identifier .)
    GT              reduce using rule 55 (expression -> identifier .)
    LT              reduce using rule 55 (expression -> identifier .)
    LPAREN          shift and go to state 33
    NOT             shift and go to state 16
    IDENTIFIER      shift and go to state 15
    NUM_INT         shift and go to state 20
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

  ! IDENTIFIER      [ reduce using rule 3 (statement -> identifier .) ]
  ! NOT             [ reduce using rule 3 (statement -> identifier .) ]
  ! LSQBRACK        [ reduce using rule 3 (statement -> identifier .) ]
  ! NUM_INT         [ reduce using rule 3 (statement -> identifier .) ]
  ! TRUE            [ reduce using rule 3 (statement -> identifier .) ]
  ! FALSE           [ reduce using rule 3 (statement -> identifier .) ]
  ! SAY             [ reduce using rule 55 (expression -> identifier .) ]
  ! SEE             [ reduce using rule 55 (expression -> identifier .) ]
  ! HEALTH          [ reduce using rule 55 (expression -> identifier .) ]
  ! FOR             [ reduce using rule 55 (expression -> identifier .) ]
  ! UNTIL           [ reduce using rule 55 (expression -> identifier .) ]
  ! RETURN          [ reduce using rule 55 (expression -> identifier .) ]
  ! IDENTIFIER      [ reduce using rule 55 (expression -> identifier .) ]
  ! NOT             [ reduce using rule 55 (expression -> identifier .) ]
  ! LSQBRACK        [ reduce using rule 55 (expression -> identifier .) ]
  ! IF              [ reduce using rule 55 (expression -> identifier .) ]
  ! TURN            [ reduce using rule 55 (expression -> identifier .) ]
  ! TURNTO          [ reduce using rule 55 (expression -> identifier .) ]
  ! STEP            [ reduce using rule 55 (expression -> identifier .) ]
  ! BEAVER          [ reduce using rule 55 (expression -> identifier .) ]
  ! TURTLE          [ reduce using rule 55 (expression -> identifier .) ]
  ! NUM_INT         [ reduce using rule 55 (expression -> identifier .) ]
  ! TRUE            [ reduce using rule 55 (expression -> identifier .) ]
  ! FALSE           [ reduce using rule 55 (expression -> identifier .) ]
  ! $end            [ reduce using rule 55 (expression -> identifier .) ]
  ! COMMA           [ reduce using rule 55 (expression -> identifier .) ]
  ! ELSE            [ reduce using rule 55 (expression -> identifier .) ]
  ! COMMA           [ reduce using rule 44 (arguments -> .) ]

    identifier                     shift and go to state 29
    expression                     shift and go to state 31
    arguments                      shift and go to state 34
    primitive                      shift and go to state 17
    boolean                        shift and go to state 25

state 4

    (4) statement -> expression .
    (56) statement -> expression . POINT TIMES ARROW_LTR statement_list COMMA
    (30) expression -> expression . PLUS expression
    (31) expression -> expression . MINUS expression
    (11) turn -> expression . POINT TURNTO expression
    (20) step -> expression . POINT STEP expression
    (34) boolean -> expression . EQ expression
    (35) boolean -> expression . GT expression
    (36) boolean -> expression . LT expression

    SAY             reduce using rule 4 (statement -> expression .)
    SEE             reduce using rule 4 (statement -> expression .)
    HEALTH          reduce using rule 4 (statement -> expression .)
    FOR             reduce using rule 4 (statement -> expression .)
    UNTIL           reduce using rule 4 (statement -> expression .)
    RETURN          reduce using rule 4 (statement -> expression .)
    IDENTIFIER      reduce using rule 4 (statement -> expression .)
    NOT             reduce using rule 4 (statement -> expression .)
    LSQBRACK        reduce using rule 4 (statement -> expression .)
    IF              reduce using rule 4 (statement -> expression .)
    TURN            reduce using rule 4 (statement -> expression .)
    TURNTO          reduce using rule 4 (statement -> expression .)
    STEP            reduce using rule 4 (statement -> expression .)
    BEAVER          reduce using rule 4 (statement -> expression .)
    TURTLE          reduce using rule 4 (statement -> expression .)
    NUM_INT         reduce using rule 4 (statement -> expression .)
    TRUE            reduce using rule 4 (statement -> expression .)
    FALSE           reduce using rule 4 (statement -> expression .)
    $end            reduce using rule 4 (statement -> expression .)
    COMMA           reduce using rule 4 (statement -> expression .)
    ELSE            reduce using rule 4 (statement -> expression .)
    POINT           shift and go to state 35
    PLUS            shift and go to state 36
    MINUS           shift and go to state 37
    EQ              shift and go to state 38
    GT              shift and go to state 39
    LT              shift and go to state 40


state 5

    (5) statement -> if_statement .

    SAY             reduce using rule 5 (statement -> if_statement .)
    SEE             reduce using rule 5 (statement -> if_statement .)
    HEALTH          reduce using rule 5 (statement -> if_statement .)
    FOR             reduce using rule 5 (statement -> if_statement .)
    UNTIL           reduce using rule 5 (statement -> if_statement .)
    RETURN          reduce using rule 5 (statement -> if_statement .)
    IDENTIFIER      reduce using rule 5 (statement -> if_statement .)
    NOT             reduce using rule 5 (statement -> if_statement .)
    LSQBRACK        reduce using rule 5 (statement -> if_statement .)
    IF              reduce using rule 5 (statement -> if_statement .)
    TURN            reduce using rule 5 (statement -> if_statement .)
    TURNTO          reduce using rule 5 (statement -> if_statement .)
    STEP            reduce using rule 5 (statement -> if_statement .)
    BEAVER          reduce using rule 5 (statement -> if_statement .)
    TURTLE          reduce using rule 5 (statement -> if_statement .)
    NUM_INT         reduce using rule 5 (statement -> if_statement .)
    TRUE            reduce using rule 5 (statement -> if_statement .)
    FALSE           reduce using rule 5 (statement -> if_statement .)
    $end            reduce using rule 5 (statement -> if_statement .)
    COMMA           reduce using rule 5 (statement -> if_statement .)
    ELSE            reduce using rule 5 (statement -> if_statement .)


state 6

    (6) statement -> turn .

    SAY             reduce using rule 6 (statement -> turn .)
    SEE             reduce using rule 6 (statement -> turn .)
    HEALTH          reduce using rule 6 (statement -> turn .)
    FOR             reduce using rule 6 (statement -> turn .)
    UNTIL           reduce using rule 6 (statement -> turn .)
    RETURN          reduce using rule 6 (statement -> turn .)
    IDENTIFIER      reduce using rule 6 (statement -> turn .)
    NOT             reduce using rule 6 (statement -> turn .)
    LSQBRACK        reduce using rule 6 (statement -> turn .)
    IF              reduce using rule 6 (statement -> turn .)
